# ATG

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  README.md  prd.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_keywords.json  todo.md
.github/workflows/: ci.yml
docs/: index.md
keywords/: library.json
src/: __init__.py  main.py
src/atg/: __init__.py  config.py  main.py
src/atg/ai/: __init__.py
src/atg/ingestion/: __init__.py
src/atg/ingestion/parsers/: __init__.py  docx_parser.py  markdown_parser.py  pdf_parser.py  text_parser.py
src/atg/keywords/: __init__.py
src/atg/scaffolding/: README.md  __init__.py
src/atg/scaffolding/templates/: test_case_cucumber.j2  test_case_junit.j2  test_case_pytest.j2  test_case_robot.j2
tests/: __init__.py  conftest.py  test_ai.py  test_cli.py  test_keywords.py  test_main.py  test_parsers.py  test_scaffolding.py
