[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atg"
version = "0.1.0"
description = "Automated Test Generator - AI-powered test generation from documentation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Abraham Ra", email = "gramos112@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "markdown>=3.3.0",
    "python-docx>=0.8.11",
    "PyPDF2>=2.0.0",
]

[project.optional-dependencies]
dev = [
    # Core development
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",

    # Testing
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.2.0",
    "pytest-timeout>=2.1.0",
    "pytest-randomly>=3.12.0",
    "pytest-asyncio>=0.20.0",
    "pytest-html>=4.0.0",
    "pytest-sugar>=0.9.0",
    "pytest-instafail>=0.4.0",
    "pytest-rerunfailures>=11.0",
    "pytest-split>=0.8.0",
    "pytest-subtests>=0.8.0",

    # Documentation
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.22.0",
    "myst-parser>=1.0.0",

    # Code quality
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "vulture>=2.7.0",
    "radon>=5.1.0",
    "mccabe>=0.7.0",
    "darglint>=1.8.0",

    # Type checking
    "types-requests>=2.28.0",
    "types-python-dateutil>=2.8.0",
    "types-pyyaml>=6.0.0",
    "types-mock>=4.0.0",

    # Build and packaging
    "build>=0.10.0",
    "twine>=4.0.0",
    "setuptools>=65.5.0",
    "wheel>=0.40.0",
    "pip-tools>=6.12.0",
]

[project.urls]
Homepage = "https://github.com/AbrahamRa/ATG"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=atg --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
